fixed wrong background-position for digit 5

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -302,7 +302,7 @@ main {
 [data-number="two_"] {background-position: -2.438rem;}
 [data-number="three_"] {background-position: -3.25rem;}
 [data-number="four_"] {background-position: -4.063rem;}
-[data-number="five_"] {background-position: -4.063rem;}
+[data-number="five_"] {background-position: -4.875rem;}
 [data-number="six_"] {background-position: -5.688rem;}
 [data-number="seven_"] {background-position: -6.5rem;}
 [data-number="eight_"] {background-position: -7.313rem;}
